# matrix-herald-bot

./: .gitignore  README.md  compose.yaml  pylintrc  pyproject.toml  pyrightconfig.json
docker/: Dockerfile  entrypoint.sh  supervisord.conf
herald-widget/: index.html  package-lock.json  package.json
herald-widget/src/: App.vue  style.css  util.js
herald-widget/src/components/: StickyWidget.vue
matrix_herald_bot/: bot.py  main.py  root.py
matrix_herald_bot/config/: env_loader.py  logging.yaml  model.py
matrix_herald_bot/connection/: connection.py
matrix_herald_bot/core/event/: bus.py  events.py  listener_interface.py  listeners.py
matrix_herald_bot/core/logging/: base.py  loggers.py
matrix_herald_bot/di/: app_module.py
matrix_herald_bot/model/: enums.py  tree.py  tree_node.py
matrix_herald_bot/services/: action_service.py  admin_service.py  commands.py  listeners.py  notification_service.py  tree_builder.py  tree_cache.py  tree_operations.py  tree_printer.py
matrix_herald_bot/util/: exceptions.py  tree_iterator.py
